--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <link rel="stylesheet" href="{{static_url('css/reset.css')}}" type="text/css" />
-<link rel="stylesheet" href="{{static_url('css/base.css')}}" type="text/css" />
+<link rel="stylesheet" href="{{static_url('css/common.css')}}" type="text/css" />
 {% block head %}{% end %}
 {% if options.ga_account %}
 <script type="text/javascript">
