--- a/templates/info.html
+++ b/templates/info.html
@@ -11,11 +11,11 @@
   <dd>2.</dd>
   <dt>
   <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
-    <div>由于迅雷离线需要验证用户的cookie，我们需要通过一个userscirpt（类似浏览器插件）来完成跨站cookie注入。</div>
+    <div>当前版本：{{ options.cross_cookie_version }}</div>
   </dt>
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
-    <div>或者，您也可以添加一个资源！</div>
+    <div>或者，您也可以使用Google账户登录后添加资源，或是直接获取离线下载地址</div>
   </dt>
 </dl>
