--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
 
 </script>
 {% end %}
+<meta name="description" content="{% block desc %}loli.lu 基于迅雷离线服务的ACG资源分享网站{% end %}" />
 </head>
 <body>
 {% block body %}{% end %}
