--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -1,5 +1,8 @@
 {% extends base.html %}
 
+{% block title %}获取离线地址{% end %}
+{% block desc %}{{ task.taskname }}{% end %}
+
 {% block head %}
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
@@ -12,10 +15,19 @@
     <div class="task-name">{{ task.taskname }}</div>
     {% if task.status == "finished" %}
     <a href="/share/{{ task.id }}" target="_blank">
-      <div class="task-botton {{ task.status }}">分享</div>
+      <div id="share-botton" class="task-botton">
+        <span>分享</span>
+        <div id="share-links" class="more-links" style="display: none;">
+          <a href="javascript:share_google();" title="分享到 Google+"><div class="task-botton">Google+</div></a>
+          <a href="javascript:share_twitter();" title="分享到 Twitter+"><div class="task-botton">Twitter</div></a>
+          <a href="javascript:share_sina();" title="分享到 新浪微博"><div class="task-botton">新浪微博</div></a>
+          <a href="javascript:share_qq();" title="分享到 腾讯微博"><div class="task-botton">腾讯微博</div></a>
+          <a href="javascript:share_douban();" title="分享到 豆瓣"><div class="task-botton">豆瓣</div></a>
+        </div>
+      </div>
     </a>
     <div id="batch-botton" class="task-botton">
-      <div class="batch-links" style="display: none;">
+      <div id="batch-links" class="more-links" style="display: none;">
         <a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>
         <a href="#" onclick="wget_links(); return false"><div class="task-botton">wget</div></a>
         <a href="#" onclick="aria2_links(); return false"><div class="task-botton">aria2</div></a>
@@ -23,11 +35,9 @@
       <span>批量下载</span>
     </div>
     {% else %}
-    <div class="task-botton {{ task.status }}">
-      <a href="/share/{{ task.id }}" target="_blank">
-        <div class="task-botton {{ task.status }}">{{ format_status(task.status) }}</div>
-      </a>
-    </div>
+    <a href="/share/{{ task.id }}" target="_blank">
+      <div class="task-botton {{ task.status }}">{{ format_status(task.status) }}</div>
+    </a>
     {% end %}
     <div class="clearfix"></div>
   </div>
@@ -54,9 +64,15 @@
 {% block foot %}
 <script>
   $("#batch-botton").hover(function() {
-    $(".batch-links").show();
+    $("#batch-links").show();
   }, function() {
-    $(".batch-links").hide();
+    $("#batch-links").hide();
+  });
+
+  $("#share-botton").hover(function() {
+    $("#share-links").show();
+  }, function() {
+    $("#share-links").hide();
   });
 
   function check_cross_cookie() {
@@ -109,6 +125,28 @@
     $("#link-text").text(str);
     $("#link-text").show();
     $("#link-text").get(0).style.posHeight=$("#link-text").get(0).scrollHeight;
+  }
+
+  var w=480;
+  var h=480;
+  var x=Number((window.screen.width-w)/2);
+  var y=Number((window.screen.height-h)/2);
+  var share_url = {% raw json_encode("http://"+request.host+"/share/"+str(task.id)) %};
+  var share_title = {% raw json_encode(task.taskname+u" - 迅雷离线分享 - loli.lu ") %};
+  function share_google() {
+    window.open("https://plusone.google.com/_/+1/confirm?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
+  }
+  function share_twitter() {
+    window.open("https://twitter.com/intent/tweet?source=webclient&text="+share_title+"&url="+share_url,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
+  }
+  function share_sina() {
+    window.open("http://v.t.sina.com.cn/share/share.php?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
+  }
+  function share_qq() {
+    window.open("http://v.t.qq.com/share/share.php?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
+  }
+  function share_douban() {
+    window.open("http://www.douban.com/recommend/?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
   }
 </script>
 {% end %}
