https support, need_cid allowed bt&ed2k

--- a/templates/info.html
+++ b/templates/info.html
@@ -17,5 +17,7 @@
   <dt>
     <div class="important">开始下载吧！</div>
     <div>或者，您也可以使用Google账户登录后添加资源，或是直接获取离线下载地址</div>
+    <div>教程： <a href="http://blog.4321.la/2011/12/526.html">Mac</a></div>
+    <div>源代码： <a href="https://github.com/binux/lixian.xunlei">GitHub</a></div>
   </dt>
 </dl>
