--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 />
 <title>{% block title %}迅雷离线分享 - LOLI.LU{% end %}</title>
 <!--[if IE]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <link rel="stylesheet" href="{{static_url('css/reset.css')}}" type="text/css" />
 <link rel="stylesheet" href="{{static_url('css/base.css')}}" type="text/css" />
