update cross-cookie tips

--- a/templates/info.html
+++ b/templates/info.html
@@ -11,13 +11,13 @@
   <dd>2.</dd>
   <dt>
   <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
-    <div>当前版本：{{ options.cross_cookie_version }}</div>
+  <div class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px;"><a href="{{ options.cross_userscript }}" style="color: red;">需要升级</a></div>
   </dt>
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
     <div>或者，您也可以使用Google账户登录后添加资源，或是直接获取离线下载地址</div>
-    <div>教程： <a href="http://blog.4321.la/2011/12/526.html">Mac</a></div>
+    <div>帮助教程： <a href="http://blog.4321.la/2011/12/526.html">Mac</a></div>
     <div>源代码： <a href="https://github.com/binux/lixian.xunlei">GitHub</a></div>
   </dt>
 </dl>
