--- a/templates/front.html
+++ b/templates/front.html
@@ -5,6 +5,7 @@
 <script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
+<link rel="alternate" type="application/atom+xml" href="/feed" />
 <script>if ($.browser.msie){ location = "{{ static_url('no-ie.html') }}" }</script>
 {% end %}
 
@@ -12,7 +13,7 @@
   {% block body-top %}{% end %}
   <div id="layout-top">
     <div id="top-left">
-      <a href="/" title="Loli.lu">Loli.lu</a>
+      <a href="/" title="{{ options.site_name }}">{{ options.site_name }}</a>
     </div>
     <div id="search">
       <form action="/">
@@ -37,7 +38,7 @@
   <div id="layout-background">
     <div class="logo">
       <div class="text">
-        <span id="text-loli">LOLI</span><span id="text-dot">·</span><span id="text-lu">LU</span>
+        <span>{{ options.site_name }}</span>
       </div>
     </div>
   </div>
