add IDM support

--- a/templates/info.html
+++ b/templates/info.html
@@ -11,7 +11,7 @@
   <dd>2.</dd>
   <dt>
   <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
-  <div class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px;"><a href="{{ options.cross_userscript }}" style="color: red;">需要升级</a></div>
+  <div class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px;"><a href="{{ options.cross_userscript }}" style="color: red;">需要安装/升级</a></div>
   </dt>
   <dd>3.</dd>
   <dt>
