plugin for flexget to add tasks auto, fix some bugs

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -108,7 +108,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">任务下载地址</div>
 	<div class="r">
-		<input type="text" name="url" id="task_url" maxlength="255" value="" style="width:300px;" onkeyup="" />
+		<input type="text" name="url" id="task_url" value="" style="width:300px;" />
 		<span>(必填)</span>
 	</div>
 	</div>
@@ -116,7 +116,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">任务标题</div>
 	<div class="r">
-		<input type="text" name="title" id="task_title" maxlength="255" value="" style="width:300px;" onkeyup="" />
+		<input type="text" name="title" id="task_title" maxlength="256" value="" style="width:300px;" />
 		<span>(选填，默认任务文件名)</span>
 	</div>
 	</div>
@@ -124,7 +124,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">标签TAG</div>
 	<div class="r">
-		<input type="text" name="tags" id="task_tags" maxlength="255" value="" style="width:300px;" onkeyup="" />
+		<input type="text" name="tags" id="task_tags" maxlength="1024" value="" style="width:300px;" />
 		<span>(必填，多个请用逗号分开)</span>
 	</div>
 	</div>
