--- a/templates/add_task_anonymous.html
+++ b/templates/add_task_anonymous.html
@@ -90,7 +90,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">任务下载地址</div>
 	<div class="r">
-		<input type="text" name="url" id="task_url" maxlength="255" value="" style="width:400px;" onkeyup="" />
+		<input type="text" name="url" id="task_url" value="" style="width:400px;" />
         <input type="hidden" name="anonymous" value="1" />
         <input class="button" name="b" type="submit" value="提交" />
 	</div>
