--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -30,7 +30,7 @@
       <div id="batch-links" class="more-links" style="display: none;">
         <a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>
         <a href="#" onclick="wget_links(); return false"><div class="task-botton">wget</div></a>
-        <a href="#" onclick="aria2_links(); return false"><div class="task-botton">aria2</div></a>
+        <a href="#" onclick="aria2_links(); return false"><div class="task-botton">aria2 x5</div></a>
         <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM</div></a>
       </div>
       <span>批量下载</span>
@@ -121,7 +121,7 @@
     var str = "";
     var cookie = get_cookie();
     $.each(get_links(), function(i, n) {
-      str += "aria2c -c -s1 -x1 --out '"+n.title+"' --header 'Cookie:"+cookie+"' '"+n.url+"'\n";
+      str += "aria2c -c -x5 --out '"+n.title+"' --header 'Cookie:"+cookie+"' '"+n.url+"'\n";
     });
     $("#link-text").text(str);
     $("#link-text").show();
