add batch download for share.html, fix fancy-overlay bug

--- a/templates/front.html
+++ b/templates/front.html
@@ -46,7 +46,7 @@
     <div class="info-box">{% block info %}{% end %}</div>
   </div>
   <div id="layout-list">{% block list %}{% end %}</div>
-  <div class="clearfix"><div>
+  <div class="clearfix"></div>
 <script>
   $(".add-task").fancybox({width: 700, height: 250});
   $(".add-task-anonymous").fancybox({width: 700, height: 70});
