--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,6 @@
  * author: binux<17175297.hk@gmail.com> 
  * global {{{ */
 
-body { position: relative; }
 .cross-cookie { padding: 7px; text-align: center; font-size: 17px; font-weight: bold; background-color: #ffc4c4; color: #c00; }
 .cross-cookie a { color: #c00; text-decoration: none; }
 .hidden { display: none; }
@@ -200,8 +199,8 @@ body { position: relative; }
       border-top-left-radius:30px;
       border-bottom-left-radius:30px;
     }
-    #layout-list .task-list .share-task-item { background-color: #666; color: #fff; }
-    #layout-list .task-list .share-task-item a { color: #fff !important; }
+    #layout-list .task-list .share-task-item { background-color: #666; color: #fff; padding-right: 10px; }
+    #layout-list .task-list .share-task-item a { color: #fff; }
       #layout-list .process-bar {
         position: absolute;
         right: 0;
@@ -236,26 +235,25 @@ body { position: relative; }
       #layout-list .task-list .ext-info {
         line-height: 20px; margin-top: 5px;
       }
-      #layout-list .task-list .ext-info .uploader { float: right; }
-      #layout-list .task-list .ext-info .tags { float: left; }
-      #layout-list .task-list .ext-info span { margin: 0px 20px; }
+      #layout-list .task-list .ext-info .uploader { float: right; margin-right: 10px; }
+      #layout-list .task-list .ext-info .tags { float: left; margin-left: 10px; }
       #layout-list .task-list .ext-info span a { text-decoration: underline; }
-/* }}} layout-info */
-
-/* lixian_box {{{ */
+/* }}} layout-info 
+ * global {{{*/
+.task-botton { float: right; font-weight: bold; border-radius: 5px; width: 70px; height: 21px; text-align: center; background-color: #fff; color: #666; position: relative; margin-left: 10px; }
+.task-botton:hover { color: #fff; background-color: #888; }
+.task-botton:hover a { color: #fff !important; }
+.task-botton a { color: #666; text-decoration: none !important; }
+.more-links { position: absolute; top: 21px; z-index: 33; }
+.more-links .task-botton { color: #fff; background-color: #999; margin: 0; }
+.more-links .task-botton:hover { color: #fff; background-color: #888; margin: 0; }
+/* }}} lixian_box {{{ */
   .lixian-box { width: 100%; }
     .lixian-box .task-info { padding: 5px 10px 5px 10px; background-color: #666; color: #fff; font-weight: bold; }
     .lixian-box .task-info .task-name { float: left; width: 500px; }
-    .lixian-box .task-info .task-botton { float: right; border-radius: 5px; width: 70px; height: 21px; text-align: center; background-color: #fff; color: #666; position: relative; margin-left: 10px; }
-    .lixian-box .task-info .task-botton:hover { color: #fff; background-color: #888; }
-    .lixian-box .task-info a { color: #666; text-decoration: none; }
-    .lixian-box .task-info .task-botton:hover span { color: #fff; }
       /*.lixian-box .task-info .finished { }*/
       /*.lixian-box .task-info .downloading { }*/
       /*.lixian-box .task-info .waiting { }*/
-    .lixian-box .task-info .more-links { position: absolute; top: 21px; z-index: 33; }
-    .lixian-box .task-info .more-links .task-botton { color: #fff; background-color: #999; margin: 0; }
-    .lixian-box .task-info .more-links .task-botton:hover { color: #fff; background-color: #888; margin: 0; }
 
     .lixian-box .file-list { margin-top: 10px; }
       .lixian-box .file-list .file-item { position: relative; padding: 5px 10px 5px 10px; }
