--- a/templates/front.html
+++ b/templates/front.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
 <link rel="alternate" type="application/atom+xml" href="/feed" />
-<script>if ($.browser.msie){ location = "{{ static_url('no-ie.html') }}" }</script>
+<script>if ($.browser.msie && parseInt($.browser.version) <= 7){ location = "{{ static_url('no-ie.html') }}" }</script>
 {% end %}
 
 {% block body %}
