--- a/templates/info.html
+++ b/templates/info.html
@@ -10,14 +10,49 @@
   </dt>
   <dd>2.</dd>
   <dt>
-  <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
-  <div class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px;"><a href="{{ options.cross_userscript }}" style="color: red;">需要安装/升级</a></div>
+  <div class="important">下载安装 跨站Cookie</div>
+  <div><a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
+  <a href="{{ options.cross_userscript }}" target="_blank" class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px; margin: 5px 0;">需要安装/升级</a>
+  <div><a href="#disabled_cross_cookie" id="disable_user_script">我无须使用浏览器下载功能</a></div>
   </dt>
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
-    <div>或者，您也可以使用Google账户登录后添加资源，或是直接获取离线下载地址</div>
+    <div>您也可以使用Google账户登录后添加资源</div>
     <div>帮助教程： <a href="http://blog.4321.la/2011/12/526.html">Mac</a></div>
     <div>源代码： <a href="https://github.com/binux/lixian.xunlei">GitHub</a></div>
   </dt>
 </dl>
+<style>
+</style>
+<div class="hidden">
+  <div id="disabled_cross_cookie">
+    <dl>
+      <dd>不安装跨站Cookie脚本，您将无法使用以下功能：</dd>
+      <dt>
+        <ul> <li>浏览器直接下载页面链接</li> </ul>
+      </dt>
+      <dd>您依然可以使用如下功能：</dd>
+      <dt> <ul>
+          <li>使用批量导出功能下载</li>
+          <li>添加，分享资源</li>
+      </ul> </dt>
+      <dd>是否关闭脚本安装提示？</dd>
+      <dt>
+        <ul>
+          <li><a href="javascript:set_cookie();">是的，我不需要使用浏览器下载功能</a></li>
+          <li><a href="{{ options.cross_userscript }}" target="_blank">否，我现在就去安装脚本</a></li>
+        </ul>
+      </dt>
+    </dl>
+  </div>
+</div>
+<script>
+  $("#disable_user_script").fancybox();
+  function set_cookie() {
+    var date=new Date();
+    date.setTime(date.getTime()+7*24*3600*1000);
+    document.cookie="cross-cookie=disabled;expires="+date.toGMTString();
+    location.reload();
+  }
+</script>
