--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -4,13 +4,16 @@
 {% block desc %}{{ task.taskname }}{% end %}
 
 {% block head %}
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
+<script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
+<link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
 {% end %}
 
 {% block body %}
 <div class="lixian-box">
-    <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装或需要升级 cross-cookie 点击前往UserScript.org安装</a></div>
+  <a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank" class="cross-cookie{% if handler.disabled_userjs() %} hidden{% end %}" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}">您尚未安装或需要升级 cross-cookie 点击前往UserScript.org安装</a>
+
   <div class="task-info">
     <div class="task-name">{{ task.taskname }}</div>
     {% if task.status == "finished" %}
@@ -30,7 +33,7 @@
         <!--<a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>-->
         <a href="#" onclick="wget_links(); return false"><div class="task-botton">wget</div></a>
         <a href="#" onclick="aria2_links(); return false"><div class="task-botton">aria2 x5</div></a>
-        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM</div></a>
+        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM 导出</div></a>
       </div>
     </div>
     {% else %}
@@ -45,7 +48,7 @@
     <li class="file-item">
       <div class="process-bar {{ file.status }}" style="width: {{ 100-file.process }}%"></div>
       {% if file.lixian_url %}
-      <a href="{{ file.lixian_url }}" target="_blank"><div class="file-title">{{ file.title }}</div></a>
+      <a class="file-title" href="{{ file.lixian_url }}" target="_blank">{{ file.title }}</a>
       {% else %}
       <div class="file-title">{{ file.title }}</div>
       {% end %}
@@ -56,6 +59,20 @@
   </ul>
   <div>
     <textarea id="link-text" style="display: none;"></textarea>
+  </div>
+</div>
+<div class="hidden">
+  <a href="#disabled_cross_cookie" id="disable-helper"></a>
+  <div id="disabled_cross_cookie">
+    <dl>
+      <dd>您已经禁用或尚未安装跨站Cookie脚本，无法使用浏览器直接下载。</dd>
+      <dt>
+        <ul>
+          <li><a href="javascript:$.fancybox.close();">好吧，我使用批量下载功能下载</a></li>
+          <li><a href="{{ options.cross_userscript }}" target="_blank">我要使用浏览器直接下载资源</a></li>
+        </ul>
+      </dt>
+    </dl>
   </div>
 </div>
 {% end %}
@@ -143,5 +160,13 @@
   function share_douban() {
     window.open("http://www.douban.com/recommend/?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
   }
+
+  $("#disable-helper").fancybox();
+  {% if handler.disabled_userjs() %}
+  $("a.file-title").click(function() {
+    $("#disable-helper").click();
+    return false;
+  });
+  {% end %}
 </script>
 {% end %}
