--- a/templates/share.html
+++ b/templates/share.html
@@ -3,20 +3,17 @@
 {% block title %}{{ task.taskname }} - 迅雷离线下载分享 - {{ options.site_name }}{% end %}
 {% block desc %}{% if task.tags %} TAGS:{{ ", ".join(task.tags) }}{% end %} UP主:{{ email2name(task.creator) or task.creator or "unknow" }}{% end %}
 
-{% block body-top %}
-  <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装cross-cookie UserScript 点击前往安装</a></div>
-{% end %}
-
 {% block info %}
-  {% if handler.get_cookie("cross-cookie") == options.cross_cookie_version %}
-  {% raw modules.TagList() %}
-  {% else %}
-  {% include info.html %}
-  {% end %}
-  <a class="goback" href="/"><div id="goback-button">&lt;- 回到首页</div></a>
+{% if handler.installed_userjs() %}
+{% raw modules.TagList() %}
+{% else %}
+{% include info.html %}
+{% end %}
+<a class="goback" href="/"><div id="goback-button">&lt;- 回到首页</div></a>
 {% end %}
 
 {% block list %}
+<div class="cross-cookie hidden" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}"></div>
 <ul class="task-list">
   <li class="push-top"></li>
   <li class="share-task-item task-item task-item-hover">
@@ -42,7 +39,7 @@
         <!--<a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>-->
         <a href="#link-text" id="wget-botton"><div class="task-botton">wget</div></a>
         <a href="#link-text" id="aria2-botton"><div class="task-botton">aria2 x5</div></a>
-        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM</div></a>
+        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM 导出</div></a>
       </div>
     </div>
       <span class="uploader">UP主: {{ email2name(task.creator) or task.creator or "unknow" }}</span>
@@ -59,7 +56,7 @@
     <div class="process-bar {{ file.status }}" style="width: {{ 100-file.process }}%"></div>
     {% end %}
     {% if file.lixian_url %}
-    <a class="get-lixian-url iframe" href="{{ file.lixian_url }}" target="_blank" title="{{ file.title }}"><div class="tname"><span class="p1">{{ len(file.title) > 15 and file.title[:-15] or file.title }}</span><span class="p2">{{ len(file.title) > 15 and file.title[-15:] or "" }}</span></div></a>
+    <a class="file-title" href="{{ file.lixian_url }}" target="_blank" title="{{ file.title }}"><div class="tname"><span class="p1">{{ len(file.title) > 15 and file.title[:-15] or file.title }}</span><span class="p2">{{ len(file.title) > 15 and file.title[-15:] or "" }}</span></div></a>
     {% else %}
     <div class="tname"><span class="p1">{{ len(file.title) > 15 and file.title[:-15] or file.title }}</span><span class="p2">{{ len(file.title) > 15 and file.title[-15:] or "" }}</span></div>
     {% end %}
@@ -69,7 +66,21 @@
   {% end %}
   <li class="push-bottom"></li>
 </ul>
-<div style="display: none;"><textarea id="link-text" style="width: 700px; height: 320px;"> </textarea></div>
+<div class="hidden"><textarea id="link-text" style="width: 700px; height: 320px;"> </textarea></div>
+<div class="hidden">
+  <a href="#disabled_cross_cookie" id="disable-helper"></a>
+  <div id="disabled_cross_cookie">
+    <dl>
+      <dd>您已经禁用或尚未安装跨站Cookie脚本，无法使用浏览器直接下载。</dd>
+      <dt>
+        <ul>
+          <li><a href="javascript:$.fancybox.close();">好吧，我使用批量下载功能下载</a></li>
+          <li><a href="{{ options.cross_userscript }}" target="_blank">我要使用浏览器直接下载资源</a></li>
+        </ul>
+      </dt>
+    </dl>
+  </div>
+</div>
 {% end %}
 
 {% block foot %}
@@ -105,7 +116,7 @@
 
   function get_links() {
     var result = [];
-    $.each($("li.file-item a"), function(i, n) {
+    $.each($("a.file-title"), function(i, n) {
       n = $(n);
       result.push({url: n.attr("href"), title: n.text()});
     });
@@ -166,5 +177,12 @@
 
   $("#wget-botton").fancybox({onStart: wget_links});  
   $("#aria2-botton").fancybox({onStart: aria2_links});  
+  $("#disable-helper").fancybox();
+  {% if handler.disabled_userjs() %}
+  $("a.file-title").click(function() {
+    $("#disable-helper").click();
+    return false;
+  });
+  {% end %}
 </script>
 {% end %}
