--- a/templates/share.html
+++ b/templates/share.html
@@ -14,14 +14,18 @@
 
 {% block list %}
 <div class="cross-cookie hidden" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}"></div>
+<span class="infohash" style="float: right;">Hash:{{ task.cid }}</span>
 <ul class="task-list">
   <li class="push-top"></li>
-  <li class="share-task-item task-item task-item-hover">
+  <li class="share-task-item">
     {% if task.status in ('waiting', 'downloading') %}
     <div class="process-bar {{ task.status }}" style="width: {{ 100-task.process }}%"></div>
     {% end %}
-    <div class="tname" title="{{ task.taskname }}"><span class="p1">{{ len(task.taskname) > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ len(task.taskname) > 15 and task.taskname[-15:] or "" }}</span></div>
-    <div class="info"><span class="file-size">{{ format_size(task.size) }}</span><span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span></div>
+    <div class="share-tname">{{ task.taskname }}</div>
+    <div class="info">
+        <span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span>
+        <span class="file-size">{{ format_size(task.size) }}</span>
+    </div>
   <div class="ext-info">
     <div id="share-botton" class="task-botton">
       <a href="/share/{{ task.id }}" target="_blank"><div>分享</div></a>
